# shinhanbank_sessionmgr

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile_se  README copy.md  README.md  README_backup.md  docker-compose.yml  log.xlsx  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: deploy-dev.yml  docker-smoke.yml  lint-and-tests.yml  pipelines.yml
agw_workflow/: link-and-tests.yml
app/: __init__.py  config.env  config.env.example  config.py  crypto.py  logger_config.py  main.py
app/api/: deps.py
app/core/: auth.py  exceptions.py  jwt.py  jwt_auth.py  policy.py  utils.py
app/db/: mariadb.py  postgres.py  redis.py
app/models/: __init__.py  context.py  mariadb_models.py  profile.py  session.py  session_status.py
app/repositories/: __init__.py  base.py  hybrid_context_repository.py  hybrid_profile_repository.py  mariadb_batch_profile_repository.py  mariadb_context_repository.py  mariadb_profile_repository.py  mariadb_session_repository.py  minio_batch_profile_repository.py  redis_context_repository.py  redis_profile_repository.py  redis_session_repository.py
app/schemas/: __init__.py  agent_sessions.py  agw.py  batch.py  common.py  contexts.py  ma.py  portal.py  profile.py  session.py  task.py
docs/: API_TESTING_GUIDE.md  DEMO_SCENARIO_V2.md  DEPLOYMENT.md  GUARDRAIL_SCENARIOS_SUMMARY.md  ONPREM_DB_SETUP.md  PRD.md  SPRINT3_BACKGROUNDTASKS.md  SPRINT3_DESIGN_FINAL.md  Session_Manager_API.md  Session_Manager_API_Sprint2.md  Session_Manager_API_Sprint3.md  Session_Manager_API_Sprint4.md  Session_Manager_API_Sprint5.md  Session_Manager_API_Sprint6.md  TDD.md  TODO.md  active_session.md  agw.md  azure_aks_cicd.md  batch.py  batch_db.md  encrypt.md  hsm-log-encryption-guide.md  jwd.md  log.md  logType.xlsx  manual_v0.1.docx  master_agnet.docx  masteragent.md  mock.sql  mulititurn.md  python-integration.md  redis_data.md  redis_onprem.md  redis_queries_and_curl_tests.md  session_es.md  session_manager_onprem_migration.md  session_manager_operations_manual.docx  sol_api.md  sprint5_add.md  (+4 more)
local_test/: CHANGELOG_2026-01-07.md  agent_code_conventions_and_secret_management.md  curl_tests.sh  curl_tests_unified.sh
ma_session/: customer_profile.py  ma_migration.md  policy.py  session.py  session_model.py  state.py
master_agent_workflow/: deploy-dev.yml  docker-smoke.yml
redis/: README_REDIS_PHASE1.md  REDIS_QUICKSTART.sh  REDIS_SETUP_COMPLETE.md  index_redis_files.sh
scripts/: create_db.py  init_db.sql
tests/: conftest.py  curl.sh  debug_minio_retrieve.py  test_agent_sessions_api.py  test_agw_api.py  test_batch_api.py  test_context_api.py  test_demo_scenario.py  test_health_check.py  test_integration.py  test_ma_api.py  test_mariadb_session_repository.py  test_multiturn.py  test_portal_api.py  test_session_batch_profile.py  test_session_close.py  test_session_create.py  test_session_jwt.py  test_session_ping.py  test_session_realtime_profile.py  test_session_resolve.py  test_session_sol_api.py  test_session_state.py  test_sessions.py  test_sessions_api.py
(+45 files in other folders)
