[project]
name = "session-manager"
version = "6.0.0"
description = "은행 AI Agent 시스템 세션 관리 서비스"
requires-python = ">=3.12,<3.13"
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    # Database (MariaDB)
    "sqlalchemy[asyncio]>=2.0.25",
    "pymysql>=1.1.0",
    "aiomysql>=0.2.0",
    "cryptography>=42.0.0", # MariaDB 연결 및 암호화에 필요
    # Redis (Async)
    "redis>=5.0.1",
    # HTTP Client
    "httpx>=0.26.0",
    # Utilities
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    # JWT (HS256만 사용하므로 cryptography extra 불필요, 하지만 cryptography는 MariaDB용으로 별도 필요)
    "PyJWT>=2.8.0",
    "minio>=7.2.20",
]

[project.optional-dependencies]
dev = [
    "black>=24.1.1",
    "isort>=5.13.2",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 140
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
]

ignore = [
    "S101",     # Allow assert in tests
    "S104",     # Binding to 0.0.0.0 (containerized apps)
    "S105",     # Hardcoded password (허용: dev/test 환경)
    "B008",     # FastAPI Depends() in function defaults is valid
    "W293",     # Blank line contains whitespace (auto-fixed)
    "F401",     # Unused imports (많은 __init__.py에서 의도적)
    "E402",     # Module import not at top (일부 동적 import 필요)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S603", "S607"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (Mock 기반, 외부 연동 없음)",
    "integration: Integration tests (실제 Redis/MinIO 연동)",
    "e2e: End-to-end tests",
    "slow: Slow tests",
    "session: SessionService 관련 테스트",
    "auth: AuthService 관련 테스트",
    "profile: ProfileService 관련 테스트",
]

[tool.coverage.run]
omit = [
    "app/db/postgres.py",
    "app/db/redis.py",
    "app/models/*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 140
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 140

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
